--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ asgiref==3.7.2
 Django==5.0.2
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 psycopg==3.1.18
 psycopg-binary==3.1.18
+PyJWT==2.8.0
 python-dotenv==1.0.1
 pytz==2024.1
 sqlparse==0.4.4
