--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ Django==5.0.2
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
+gunicorn==21.2.0
+packaging==23.2
 psycopg==3.1.18
 psycopg-binary==3.1.18
 PyJWT==2.8.0
